...
            
            //Adds row to choose crew position from list of all available
            <<< crewPosRow
            
            //Adds button that dismisses view
            <<< ButtonRow(){ row in
                row.title = "Begin"
                row.onCellSelection({ (button, row) in
                    print("button on select")
                    self.dismissSetup()
                    
                })
        }
...
